--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,30 @@
+aiofiles==22.1.0
+ajax==3.0.0
 anyio==3.6.2
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
 click==8.1.3
 colorama==0.4.6
 DateTime==4.7
+decorator==5.1.1
+Django==4.1.3
+django-appconf==1.0.5
 fastapi==0.87.0
 greenlet==2.0.1
 h11==0.14.0
 idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mysql-connector-python==8.0.31
+protobuf==3.20.1
 pydantic==1.10.2
+PyMySQL==1.0.2
 pytz==2022.6
 sniffio==1.3.0
 SQLAlchemy==1.4.44
+sqlparse==0.4.3
 starlette==0.21.0
 typing_extensions==4.4.0
+tzdata==2022.6
 uvicorn==0.20.0
 zope.interface==5.5.2
