--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,16 @@ idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mysql-connector-python==8.0.31
+numpy==1.23.5
+opencv-python==4.6.0.66
+pandas==1.5.2
 protobuf==3.20.1
 pydantic==1.10.2
 PyMySQL==1.0.2
+python-dateutil==2.8.2
+python-multipart==0.0.5
 pytz==2022.6
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.44
 sqlparse==0.4.3
